Bug 454503 - Auto-hidden Plasma panel still shows edge highlight effect when app is fullscreen, even though the edge doesn't do anything when touched with the cursor
Summary: Auto-hidden Plasma panel still shows edge highlight effect when app is fullsc...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.24.90
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-27 20:38 UTC by Matej Starc
Modified: 2022-06-13 16:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matej Starc 2022-05-27 20:38:07 UTC
SUMMARY
Panel set to autohide does not show when a fullscreen app is open. 


STEPS TO REPRODUCE
1. Set panel to autohide
2. Open app and set it to fullscreen (CTRL+F11)
3. Try using the panel

OBSERVED RESULT
It shows that quick corners animation indication that something is going to happen if you hover to that position, but nothing happens after doing so.

EXPECTED RESULT
Not showing the panel is an UX choice, but still showing the blue animation indication that hovering there will show the panel should be fixed (it shouldn't display anything).

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.24.90
KDE Frameworks Version: 5.94.0
Qt Version: 5.15.4
Kernel Version: 5.17.9-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 12 × Intel® Core™ i7-8700 CPU @ 3.20GHz
Memory: 15.5 GiB of RAM
Graphics Processor: AMD Radeon RX 480 Graphics
Comment 1 Nate Graham 2022-06-01 17:09:41 UTC
I can reproduce this with a non-floating panel, and I think it's intentional.

Still, the blue hover highlight shouldn't appear in this case. That's controlled by KWin; moving there.
Comment 2 Bug Janitor Service 2022-06-13 09:18:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2512
Comment 3 Vlad Zahorodnii 2022-06-13 13:24:43 UTC
Git commit 4e32ea20d65dd81fae0d124d8c8fb60058602bdc by Vlad Zahorodnii.
Committed on 13/06/2022 at 12:35.
Pushed by vladz into branch 'master'.

Disable screen edge approach area if the edge is blocked

Currently, if the screen edge is blocked and the cursor is inside its
approach geometry, kwin is going to paint screen edge glow.

It doesn't look good and it can have some performance penalties with
fullscreen video games because the direct scanout path will be blocked.

M  +6    -3    src/screenedge.cpp

https://invent.kde.org/plasma/kwin/commit/4e32ea20d65dd81fae0d124d8c8fb60058602bdc
Comment 4 Vlad Zahorodnii 2022-06-13 13:55:42 UTC
Git commit 35461c014107877e5d530df1239e2800af490f80 by Vlad Zahorodnii.
Committed on 13/06/2022 at 13:55.
Pushed by vladz into branch 'Plasma/5.25'.

Disable screen edge approach area if the edge is blocked

Currently, if the screen edge is blocked and the cursor is inside its
approach geometry, kwin is going to paint screen edge glow.

It doesn't look good and it can have some performance penalties with
fullscreen video games because the direct scanout path will be blocked.


(cherry picked from commit 4e32ea20d65dd81fae0d124d8c8fb60058602bdc)

M  +6    -3    src/screenedge.cpp

https://invent.kde.org/plasma/kwin/commit/35461c014107877e5d530df1239e2800af490f80