Disable screen edge approach area if the edge is blocked

Currently, if the screen edge is blocked and the cursor is inside its
approach geometry, kwin is going to paint screen edge glow.

It doesn't look good and it can have some performance penalties with
fullscreen video games because the direct scanout path will be blocked.

BUG: 454503


(cherry picked from commit 4e32ea20d65dd81fae0d124d8c8fb60058602bdc)